# conan

./: .dockerignore  .gitignore  .htaccess  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.yml  conan.container  db.php  deploy.yml  docker-entrypoint.sh  index.php  manage.py  new.php  package-lock.json  package.json  pyproject.toml
.github/: renovate.json5
.github/workflows/: pr-preview.yml  release.yml
conan/: jinja2_env.py  settings.py  urls.py  wsgi.py
conan/accounts/: apps.py  backends.py  middleware.py  urls.py  views.py
conan/accounts/jinja2/accounts/: login.html.jinja
conan/concerts/: apps.py  checklist.py  models.py  urls.py  views.py
conan/concerts/jinja2/concerts/: archives.html.jinja  detail.html.jinja  list.html.jinja
conan/concerts/jinja2/concerts/partials/: item.html.jinja  step.html.jinja  title.html.jinja
conan/concerts/migrations/: 0001_initial.py  0002_alter_concert_date.py  0003_concert_archived.py  0004_add_lieu_to_concert.py  0004_concert_concert_negi.py  0005_lieu_to_textfield.py
concert/: index.php  save.php
concerts/: checklist.py  models.py  urls.py  views.py
concerts/jinja2/concerts/: base.html.jinja  list.html.jinja
concerts/jinja2/concerts/partials/: item.html.jinja  macros.html.jinja  progress.html.jinja  step.html.jinja
static/conan/: app.css
templates/: base.html.jinja
